Converted Products and Inventory to use NoSQL (MongoDB)

--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,9 @@ name = "pypi"
 [packages]
 flask = "*"
 python-dotenv = "*"
-flask-sqlalchemy = "*"
 flask-migrate = "*"
-psycopg2 = "*"
 requests = "*"
+flask-pymongo = "*"
 
 [dev-packages]
 
